--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
   </div>
   <p class="text-end">
-     class="text-end">Copyright 2022, Original Trombones
+    Copyright 2022, Original Trombones
   </p>
 </footer>
 
